--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "element-ui": "^2.4.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
+    "@vue/cli-plugin-router": "^4.3.1",
     "@vue/cli-service": "^3.0.5",
     "@vue/eslint-config-prettier": "^5.0.0",
     "axios": "^0.18.0",
@@ -29,6 +31,7 @@
     "svgo": "^1.1.0",
     "svgo-loader": "^2.1.0",
     "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-svg-sprite": "^1.0.0",
     "vue-cli-plugin-vuex-module-generator": "^0.1.1",
     "vue-template-compiler": "^2.6.10"
